# Kovi

./: .gitignore  Cargo.toml  README.md  README_Cargo.md  README_EN.md
kovi/: Cargo.toml
kovi-macros/: Cargo.toml
kovi-macros/src/: lib.rs
kovi-milky/: Cargo.toml
kovi-milky/src/: driver.rs  event.rs  event_registrar.rs  lib.rs  message_trait.rs  milky_api.rs  milky_message.rs
kovi-milky/src/driver/: config.rs  connect.rs
kovi-milky/src/driver/connect/: api_cnt.rs  event_cnt.rs
kovi-milky/src/event/: admin_msg_event.rs  bot_offline.rs  friend_file_upload.rs  friend_msg_event.rs  friend_nudge.rs  friend_request.rs  group_admin_change.rs  group_essence_message_change.rs  group_file_upload.rs  group_invitation.rs  group_invited_join_request.rs  group_join_request.rs  group_member_decrease.rs  group_member_increase.rs  group_message_reaction.rs  group_msg_event.rs  group_mute.rs  group_name_change.rs  group_nudge.rs  group_whole_mute.rs  message_recall.rs  msg_event.rs  msg_send_from_kovi_event.rs  peer_pin_change.rs
kovi-milky/src/milky_api/: file.rs  friend.rs  group.rs  message.rs  system.rs
kovi-onebot/: Cargo.toml
kovi-onebot/src/: driver.rs  event.rs  event_registrar.rs  lib.rs  message.rs  message_trait.rs  onebot_api.rs  onebot_message.rs
kovi-onebot/src/driver/: config.rs
kovi-onebot/src/driver/connect/: api_cnt.rs  event_cnt.rs
kovi-onebot/src/event/: admin_msg_event.rs  group_msg_event.rs  lifecycle_event.rs  msg_event.rs  msg_send_from_kovi_event.rs  msg_send_from_server_event.rs  notice_event.rs  private_msg_event.rs  request_event.rs
kovi/src/: bot.rs  config.rs  drive.rs  driver.rs  error.rs  event.rs  lib.rs  logger.rs  message.rs  plugin.rs  utils.rs
kovi/src/bot/: handler.rs  run.rs  runtimebot.rs
kovi/src/bot/run/: connect.rs
kovi/src/bot/runtimebot/: kovi_api.rs
kovi/src/config/: kovi_conf.rs
kovi/src/event/: id.rs
kovi/src/event/id/: ref_id.rs  test.rs
kovi/src/plugin/: plugin_builder.rs
src/: bot.rs  config.rs  drive.rs  error.rs  event.rs  lib.rs  logger.rs  main.rs  message.rs  plugin.rs  task.rs  types.rs  utils.rs
src/bot/: connect.rs  event.rs  handler.rs  message.rs  plugin.rs  plugin_builder.rs  run.rs  runtime.rs  runtimebot.rs
src/bot/event/: admin_msg_event.rs  group_msg_event.rs  lifecycle_event.rs  msg_event.rs  msg_send_from_kovi_event.rs  msg_send_from_server_event.rs  notice_event.rs  private_msg_event.rs  request_event.rs
src/bot/message/: add.rs
src/bot/plugin_builder/: event.rs
src/bot/plugin_builder/event/: msg_event.rs  notice_event.rs  request_event.rs
src/bot/run/: connect.rs
src/bot/runtimebot/: kovi_api.rs  onebot_api.rs
src/config/: kovi_conf.rs  runtime_config.rs
src/driver/: mod.rs
src/event/id/: ref_id.rs
src/message/: add.rs
src/plugin/: plugin_builder.rs  plugin_set.rs
tests/: test_all_features.sh
