[package]
name = "kovi-dev"
version = "0.1.0"
edition = "2024"

[dependencies]
kovi.workspace = true
kovi-onebot.workspace = true
dhat = "0.3.3"
test-hi = { version = "0.1.0", path = "plugins/test-hi" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"

[workspace]
members = [
    "kovi",
    "kovi-onebot",
    "kovi-macros",
]

[workspace.dependencies]
kovi = { path = "kovi" }
ahash = "0.8"
chrono = "0.4"
croner = "2"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
futures-util = "0.3"
http = "1"
kovi-macros = { version = "0.5" }
log = "0.4"
parking_lot = "0.12"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full", "windows-sys"] }
tokio-tungstenite = "0.26"
toml = "0.8"
toml_edit = "0.22"
kovi-onebot = { path = "kovi-onebot" }

# [package.metadata]
# rust-version = "nightly"

[patch.crates-io]
kovi-macros = { version = "0.5.1", path = "kovi-macros" }
kovi = { path = "kovi" }
