[workspace]
resolver = "3"
members = [
    "kovi",
    "kovi-onebot",
    "kovi-macros",
    "kovi-milky",
    "plugins/*",
]

[workspace.dependencies]
anyhow = "1"
kovi = { path = "kovi" }
ahash = "0.8"
chrono = "0.4"
croner = "2"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
futures-util = "0.3"
http = "1"
kovi-macros = { version = "0.5" }
log = "0.4"
parking_lot = "0.12"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full", "windows-sys"] }
tokio-tungstenite = "0.26"
toml = "0.8"
toml_edit = "0.22"
kovi-onebot = { path = "kovi-onebot" }
kovi-milky = { path = "kovi-milky" }
reqwest = { version = "0.13", features = ["json"] }
async-trait = "0.1"


[patch.crates-io]
kovi = { path = "kovi" }
kovi-onebot = { path = "kovi-onebot" }
kovi-milky = { path = "kovi-milky" }
kovi-macros = { version = "0.5.1", path = "kovi-macros" }


# [package.metadata]
# rust-version = "nightly"
