[package]
name = "kovi-macros"
version = "0.5.3"
edition = "2024"
description = "An auxiliary library for the kovi crate"
license = "MPL-2.0"
authors = ["ThriceCola <thricecola@hotmail.com>"]
repository = "https://github.com/ThriceCola/Kovi"

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
