[package]
name = "kovi-milky"
version = "0.13.0-rc1"
edition = "2024"

[dependencies]
ahash.workspace = true
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
http.workspace = true
kovi.workspace = true
log.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["full"] }
tokio-tungstenite.workspace = true
toml.workspace = true
toml_edit.workspace = true
chrono.workspace = true
async-trait.workspace = true
reqwest.workspace = true
