[package]
name = "kovi-onebot"
version = "0.13.0"
edition = "2024"

[dependencies]
ahash.workspace = true
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
http = "1"
kovi.workspace = true
log.workspace = true
parking_lot = "0.12"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
toml = "0.9"
toml_edit = "0.23"
chrono = "0.4"
async-trait = "0.1"

[features]
cqstring = []

native-tls-vendored = ["tokio-tungstenite/native-tls-vendored"]
rustls-tls-native-roots = ["tokio-tungstenite/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["tokio-tungstenite/rustls-tls-webpki-roots"]
